# gliner2-mlx

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  benchmark_statistical.py  main.py  pyproject.toml
.github/workflows/: publish.yml
src/gliner2_mlx/: __init__.py  convert.py  deberta_v2.py  engine.py  layers.py  model.py  span_rep.py
tests/: conftest.py  test_convert.py  test_deberta.py  test_engine.py  test_engine_eval.py  test_layers.py  test_model.py  test_quantize.py  test_span_rep.py  test_weight_loading.py
