[project]
name = "gliner2-mlx"
version = "0.1.0"
description = "GLiNER2 information extraction on Apple Silicon via MLX"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Andrew Chen Wang" },
]
keywords = ["mlx", "gliner", "ner", "entity-extraction", "apple-silicon", "information-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "mlx>=0.20.0",
    "gliner2>=1.2.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "urllib3>=2.6.3",
    "requests>=2.33.1",
]

[project.urls]
Homepage = "https://github.com/Andrew-Chen-Wang/gliner2-mlx"
Repository = "https://github.com/Andrew-Chen-Wang/gliner2-mlx"
Issues = "https://github.com/Andrew-Chen-Wang/gliner2-mlx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gliner2_mlx"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".idea/",
    ".venv/",
    ".pytest_cache/",
    ".ruff_cache/",
    "benchmark_statistical.py",
    "main.py",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a7",
]
bench = [
    "scipy>=1.17.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require model download (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["gliner2_mlx"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
invalid-return-type = "warn"
not-subscriptable = "warn"
invalid-argument-type = "warn"
